python.buf.txt
Python 2.7.12 (default, Nov 19 2016, 06:48:10) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> >>> >>> >>> 1 1= 2
  File "<stdin>", line 1
    1 1= 2
      ^
SyntaxError: invalid syntax
>>> 1!=2
True
>>> gt1
[1, [[2, [[5, []]]], [3, []], [4, []]]]
>>> a = ["a',"b","cccc", "def"]
  File "<stdin>", line 1
    a = ["a',"b","cccc", "def"]
                     ^
SyntaxError: invalid syntax
>>> a = ["a","b","cccc", "def"]
>>> a
['a', 'b', 'cccc', 'def']
>>> a[0]
'a'
>>> a[1]
'b'
>>> a[1:]
['b', 'cccc', 'def']
>>> bfs(t1)
[1, 2, 3, 4, 5]
>>> bfs(t1)
ac is [] tlist is [[1, [[2, [[5, []]]], [3, []], [4, []]]]]
ac is [1] tlist is [[2, [[5, []]]], [3, []], [4, []]]
ac is [1, 2] tlist is [[3, []], [4, []], [5, []]]
ac is [1, 2, 3] tlist is [[4, []], [5, []]]
ac is [1, 2, 3, 4] tlist is [[5, []]]
[1, 2, 3, 4, 5]
>>> bfs(t1)
ac is [] tlist is [[1, [[2, [[5, []]]], [3, []], [4, []]]]]
ac is [1] tlist is [[2, [[5, []]]], [3, []], [4, []]]
ac is [1, 2] tlist is [[5, []], [3, []], [4, []]]
ac is [1, 2, 5] tlist is [[3, []], [4, []]]
ac is [1, 2, 5, 3] tlist is [[4, []]]
[1, 2, 5, 3, 4]
>>> 

Process Python finished
Python 2.7.12 (default, Nov 19 2016, 06:48:10) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> >>> >>> >>> 
>>> bfs
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'bfs' is not defined
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/akanksha/bfs.py", line 5
    --        print "ac is %s tlist is %s" % (ac,tlist)
    ^
IndentationError: expected an indented block
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/akanksha/bfs.py", line 5
    --        print "ac is %s tlist is %s" % (ac,tlist)
                  ^
SyntaxError: invalid syntax
>>> bfs(t1)
[1, 2, 5, 3, 4]
>>> bfs(t1)
[1, 2, 5, 3, 4]
>>> t2
[2, [[5, []]]]
>>> t3
[3, []]
>>> [bfs(t) for t in [t1,t2,t3,t4]]
[[1, 2, 5, 3, 4], [2, 5], [3], [4]]
>>> [bfs(t) for t in [t1,t2,t3,t4]]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/akanksha/bfs.py", line 8, in bfs
NameError: global name 'sl' is not defined
>>> [bfs(t) for t in [t1,t2,t3,t4]]
[[1, 2, 3, 4, 5], [2, 5], [3], [4]]
>>> [bfs(t) for t in [t1,t2,t3,t4]]
[1, 2, 3, 4, 5]
[2, 5]
[3]
[4]
[None, None, None, None]
>>> 